# simple_auto_camera_raspberrypi

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
