[package]
name = "simple_auto_camera_raspberrypi"
version = "0.1.0"
edition = "2021"

[dependencies]
rascam = "0.0.2"
tracing = "0.1.37"
chrono = "0.4"
reqwest = { version = "0.12.9", features = ["multipart", "blocking", "stream"] }
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
